[package]
name = "xfce4-panel-richmon-babel"
version = "0.1.0"
edition = "2021"
description = "Richmon panel indicator daemon for babel-managed Claude sessions"
authors = ["nuck"]

[[bin]]
name = "richmon-babel"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal", "sync", "net", "io-util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging - Centralized via spaceship-std (~/Workspace/logging.toml with SIGHUP hot-reload)
# Sink: journald (view with: journalctl -t richmon-babel)
tracing = "0.1"
spaceship-std = { version = "0.1", path = "../../Lib/spaceship-std" }

# Local dependency - claude-babel for event types and IPC
claude-babel = { path = "../../Daemons/claude-babel" }
