[package]
name = "hobar-richmon-babel"
version = "0.1.0"
edition = "2021"
authors = ["nuck"]
description = "Richmon hobar indicator daemon for babel-managed terminal sessions"
license = "GPL-2.0-or-later"
repository = "https://github.com/holo-q/hobar-richmon-babel"
readme = "README.md"

[[bin]]
name = "richmon-babel"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal", "sync", "net", "io-util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging - Centralized via spaceship-std (~/Workspace/logging.toml with SIGHUP hot-reload)
# Sink: journald (view with: journalctl -t richmon-babel)
tracing = "0.1"
spaceship-std = { version = "0.2", path = "../spaceship-std" }

# Local dependency - babel for protocol types only; no GTK render surface.
babel = { path = "../babel", default-features = false }
